--- a/TheMindSpire/Views/Shared/_Layout.cshtml
+++ b/TheMindSpire/Views/Shared/_Layout.cshtml
@@ -10,8 +10,7 @@
     <meta name="author" content="TheMindSpire" />
     
     <!-- Google Search Console Verification -->
-    <!-- TODO: Add your Google verification meta tag here after registering in Search Console -->
-    <!-- <meta name="google-site-verification" content="YOUR_VERIFICATION_CODE" /> -->
+    <meta name="google-site-verification" content="a681bfa1f085f740" />
     
     <title>@ViewData["Title"] - TheMindSpire</title>
 
